# platform.core.security.libcryptsvc

./: AUTHORS  CMakeLists.txt  COPYING  LICENSE.Flora  NOTICE  cryptsvc.pc.in  project.config
debian/: changelog  control  libcryptsvc-0.install.in  rules
gadget/: CMakeLists.txt  duid-gadget.c
include/: SecCryptoSvc.h  SecTzSvc.h  device_info.h  tci.h  tlc_tzcrypt.h  tltzcrypt_api.h
packaging/: libcryptsvc.changes  libcryptsvc.spec
srcs/: SecCryptoSvc.c  SecTzSvc.c  device_info.c
test/: CMakeLists.txt  colour_log_formatter.cc  colour_log_formatter.h  cs_test.cc  device_info_test.cc  main.cc
