SET(GADGET duid-gadget)
SET(GADGET_SRCS 
	duid-gadget.c 
	../srcs/SecCryptoSvc.c 
)

SET(GADGET_VENDOR samsung)
SET(GADGET_DIR /opt/etc/)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(GADGET_PKGS REQUIRED dlog openssl)

FOREACH(flag ${GADGET_PKGS_CFLAGS})
        SET(GADGET_CFLAGS "${GADGET_CFLAGS} ${flag} -fPIE")
ENDFOREACH(flag)

SET(GADGET_CFLAGS, "${GADGET_CFLAGS} -DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
SET(GADGET_CFLAGS, "${GADGET_CFLAGS} -DVENDOR=\"${GADGET_VENDOR}\"")
SET(GADGET_CFLAGS, "${GADGET_CFLAGS} -DAPP_NAME=\"${GADGET}\"")
SET(GADGET_CFLAGS, "${GADGET_CFLAGS} -DAPP_DIR=\"${GADGET_DIR}\"")

ADD_EXECUTABLE(${GADGET} ${GADGET_SRCS})
SET_TARGET_PROPERTIES(${GADGET} PROPERTIES COMPILE_FLAGS "${GADGET_CFLAGS}")
TARGET_LINK_LIBRARIES(${GADGET} ${GADGET_PKGS_LDFLAGS} -pie)

INSTALL(TARGETS ${GADGET} DESTINATION ${GADGET_DIR} )
