PKG_CHECK_MODULES(GADGET_DEP REQUIRED ${CRYPTSVC_REQUIRES})

SET(GADGET_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/duid-gadget.c
    ${PROJECT_SOURCE_DIR}/srcs/SecCryptoSvc.c
)

SET(GADGET_VENDOR samsung)
SET(GADGET_DIR ${TZ_SYS_ETC})

INCLUDE_DIRECTORIES(
    ${GADGET_DEP_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(GADGET_CFLAGS "${GADGET_DEP_CFLAGS} -fPIE")
SET(GADGET_CFLAGS "${GADGET_CFLAGS} -DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
SET(GADGET_CFLAGS "${GADGET_CFLAGS} -DVENDOR=\"${GADGET_VENDOR}\"")
SET(GADGET_CFLAGS "${GADGET_CFLAGS} -DAPP_NAME=\"${TARGET_GADGET}\"")
SET(GADGET_CFLAGS "${GADGET_CFLAGS} -DAPP_DIR=\"${GADGET_DIR}\"")

ADD_EXECUTABLE(${TARGET_GADGET} ${GADGET_SRCS})

SET_TARGET_PROPERTIES(${TARGET_GADGET}
    PROPERTIES
        COMPILE_FLAGS "${GADGET_CFLAGS}"
)

TARGET_LINK_LIBRARIES(${TARGET_GADGET}
    ${GADGET_DEP_LDFLAGS}
    -pie
)

INSTALL(TARGETS ${TARGET_GADGET} DESTINATION ${GADGET_DIR})
